--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Video Stream</title>
+    <title>Live Video Stream</title>
+    <script src="config.js"></script>
     <style>
-        body { margin: 0; background: black; display: flex; justify-content: center; align-items: center; height: 100vh; }
-        img { max-width: 100%; max-height: 100%; }
+        body {
+            background-color: #000;
+            color: #fff;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            border: 2px solid #fff;
+        }
     </style>
 </head>
 <body>
-    <img id="stream" src="" alt="Video Stream">
-    <script src="config.js"></script>
+    <h1>Raspberry Pi Live Camera Stream</h1>
+    <img id="videoStream" src="" alt="Loading stream...">
     <script>
-        document.getElementById('stream').src = STREAM_URL;
+        // Set the image src dynamically from config.js
+        document.getElementById("videoStream").src = STREAM_URL;
     </script>
 </body>
 </html>
